// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Save and Discard buttons but not translation dialog when new dashboard (no dashboard id) 1`] = `
<div>
  <div
    class="editBar"
    data-test="edit-control-bar"
  >
    <div
      class="controls"
    >
      <div
        class="ui-ButtonStrip"
      >
        <div
          class="OfflineTooltip"
        >
          <div
            class="ui-Button"
          >
            Save changes
          </div>
        </div>
        <div
          class="OfflineTooltip"
        >
          <div
            class="ui-Button"
          >
            Print preview
          </div>
        </div>
        <div
          class="OfflineTooltip"
        >
          <div
            class="ui-Button"
          >
            Filter settings
          </div>
        </div>
      </div>
      <div
        class="ui-Button"
      >
        Exit without saving
      </div>
    </div>
  </div>
  <div
    class="mock-filter-settings-dialog"
  />
</div>
`;

exports[`renders Translate, Delete, and Discard buttons when delete access 1`] = `
<div>
  <div
    class="editBar"
    data-test="edit-control-bar"
  >
    <div
      class="controls"
    >
      <div
        class="ui-ButtonStrip"
      >
        <div
          class="OfflineTooltip"
        >
          <div
            class="ui-Button"
          >
            Save changes
          </div>
        </div>
        <div
          class="OfflineTooltip"
        >
          <div
            class="ui-Button"
          >
            Print preview
          </div>
        </div>
        <div
          class="OfflineTooltip"
        >
          <div
            class="ui-Button"
          >
            Filter settings
          </div>
        </div>
        <div
          class="OfflineTooltip"
        >
          <div
            class="ui-Button"
          >
            Translate
          </div>
        </div>
        <div
          class="OfflineTooltip"
        >
          <div
            class="ui-Button"
          >
            Delete
          </div>
        </div>
      </div>
      <div
        class="ui-Button"
      >
        Exit without saving
      </div>
    </div>
  </div>
  <div
    class="mock-filter-settings-dialog"
  />
</div>
`;

exports[`renders only the Go to Dashboards button when no update access 1`] = `
<div>
  <div
    class="editBar"
    data-test="edit-control-bar"
  >
    <div
      class="controls"
    >
      <div
        class="ui-Button"
      >
        Go to dashboards
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the ActionsBar without Delete when no delete access 1`] = `
<div>
  <div
    class="editBar"
    data-test="edit-control-bar"
  >
    <div
      class="controls"
    >
      <div
        class="ui-ButtonStrip"
      >
        <div
          class="OfflineTooltip"
        >
          <div
            class="ui-Button"
          >
            Save changes
          </div>
        </div>
        <div
          class="OfflineTooltip"
        >
          <div
            class="ui-Button"
          >
            Print preview
          </div>
        </div>
        <div
          class="OfflineTooltip"
        >
          <div
            class="ui-Button"
          >
            Filter settings
          </div>
        </div>
        <div
          class="OfflineTooltip"
        >
          <div
            class="ui-Button"
          >
            Translate
          </div>
        </div>
      </div>
      <div
        class="ui-Button"
      >
        Exit without saving
      </div>
    </div>
  </div>
  <div
    class="mock-filter-settings-dialog"
  />
</div>
`;
